--- a/public/style/index.css
+++ b/public/style/index.css
@@ -17,19 +17,24 @@ html {
   max-width: 100vw;
   font-size: 16px;
   display: block;
-  overflow: scroll;
+  overflow-x: hidden;
+  overflow-y: visible;
   scroll-behavior: smooth;
+  
+  scrollbar-width: thin;
+  scrollbar-color: #646464 light;
 }
 
 body {
-  width: 100vw;
+  max-width: 100%;
   margin: 0;
   font-family: 'Bierstadt Bold', sans-serif;
   font-weight: 500;
   background-color: #d7855f;
 }
 
-h1{
+
+h1 {
   text-align: center;
   font-family: 'Stencil', sans-serif;
   font-size: 3rem;
@@ -38,14 +43,14 @@ h1{
   margin: 0;
 }
 
-p{
+p {
   font-size: 1.25rem;
 }
 
 table{
   margin-left: 10%;
   margin-right: 10%;
-  margin-bottom: 10vh;
+  margin-bottom: 2vh;
   left: 20vw;
   width: 80%;
   table-layout: fixed;
@@ -56,23 +61,24 @@ table{
 }
 
 .content{
-  padding: 8vh 20vw 3vh;
+  padding: 8vh 20vw 8vh;
   position: relative;
   height: fit-content;
-  width: 60vw;
+  max-width: 60%;
+  width: 60%;
   display: block;
 
   background-image: url('../images/soos.svg'), url('../images/soos.svg');
   background-repeat: repeat-y, repeat-y;
-  background-position-x: 0.5vw, 96.5vw;
+  background-position-x: 1vw, 96vw;
   background-size: 3vw;
 }
 
 .content::after {
   content: '';
   position: absolute;
-  right: 0;
   left: 0;
+  right: 0;
   top: 100%;
   z-index: 10;
   display: block;
