--- a/public/style/navbar.css
+++ b/public/style/navbar.css
@@ -7,12 +7,13 @@ ul {
   z-index: 640;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
+  max-width: 100%;
   height: 5vh;
   border-bottom-color: #245e8b;
   border-bottom-width: 2px;
   border-bottom-style: solid;
-  overflow: scroll;
+  overflow: hidden;
 }
 
 li {
