Mobile navbar added

--- a/public/style/index.css
+++ b/public/style/index.css
@@ -61,17 +61,12 @@ table{
 }
 
 .content{
-  padding: 8vh 20vw 8vh;
   position: relative;
   height: fit-content;
   max-width: 60%;
   width: 60%;
   display: block;
 
-  background-image: url('../images/soos.svg'), url('../images/soos.svg');
-  background-repeat: repeat-y, repeat-y;
-  background-position-x: 1vw, 96vw;
-  background-size: 3vw;
 }
 
 .content::after {
@@ -87,4 +82,33 @@ table{
   background-size: 4vh 100%;
   background-image: linear-gradient(135deg, #d7855f 25%, transparent 25%), linear-gradient(225deg, #d7855f 25%, transparent 25%);
   background-position: 0 0;
+}
+
+@media (min-width:320px)  { /* smartphones, iPhone, portrait 480x320 phones */
+
+  html{
+    font-size: 32px;
+  }
+
+  .content{
+    max-width: 80%;
+    width: 80%;
+    padding: 8vh 10vw 8vh;
+  }
+}
+@media (min-width:641px)  { /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */
+  html{
+    font-size: 16px;
+  }
+}
+@media (min-width:961px)  { /* tablet, landscape iPad, lo-res laptops ands desktops */
+}
+@media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */
+}
+@media (min-width:1281px) { /* hi-res laptops and desktops */
+  padding: 8vh 20vw 8vh;
+  background-image: url('../images/soos.svg'), url('../images/soos.svg');
+  background-repeat: repeat-y, repeat-y;
+  background-position-x: 1vw, 96vw;
+  background-size: 3vw;
 }
