--- a/public/style/navbar.css
+++ b/public/style/navbar.css
@@ -1,3 +1,21 @@
+#navlinks {
+  display: flex;
+  flex-direction: column;
+  height: fit-content;
+  overflow: hidden;
+  width: 0;
+  position: fixed;
+  z-index: 20;
+  top: 8vh;
+  left: -2px;
+  background-color: #d7855f;
+  color: #245e8b;
+  overflow-x: hidden;
+  transition: 0.5s ease all;
+  border-right: solid #245e8b 2px;
+  border-bottom: solid #245e8b 2px;
+}
+
 ul {
   list-style-type: none;
   margin: 0;
@@ -22,7 +40,7 @@ li {
   flex-direction: row;
   align-items: center;
   color: #245e8b;
-  height: calc(5vh - 8px);
+  height: calc(100% - 8px);
   top: 0;
   margin-top: 4px;
   margin-left: 0.25vw;
@@ -75,9 +93,37 @@ li:hover{
   color: #d7855f;
 }
 
-@media (min-width:320px)  { /* smartphones, iPhone, portrait 480x320 phones */
+@media only screen and (max-device-width:1280px) { /* big landscape tablets, laptops, and desktops */
+  #navbar-mobile{
+    display: none;
+  }
+
+  #navbar{
+    display: initial;
+  }
+
+  #navbar li button, #navbar li a{
+    font-size: 1rem;
+  }
+}
+
+@media only screen and (max-device-width:1024px) { /* tablet, landscape iPad, lo-res laptops ands desktops */
+  #navbar-mobile button, #navbar-mobile a, #navbar-mobile a.icon, #navlinks li a{
+    font-size: 2rem;
+  }
+}
+
+@media only screen and (max-device-width: 640px) { /* smartphones, iPhone, portrait 480x320 phones */
   #navbar{
     display: none;
+  }
+
+  #navbar-mobile{
+    display: block;
+  }
+
+  ul{
+    height: 8vh;
   }
 
   #navbar-mobile button{
@@ -94,24 +140,6 @@ li:hover{
     margin-bottom: 2.5%;
   }
 
-  #navlinks {
-    display: flex;
-    flex-direction: column;
-    height: fit-content;
-    overflow: hidden;
-    width: 0;
-    position: fixed;
-    z-index: 20;
-    top: 5vh;
-    left: -2px;
-    background-color: #d7855f;
-    color: #245e8b;
-    overflow-x: hidden;
-    transition: 0.5s;
-    border-right: solid #245e8b 2px;
-    border-bottom: solid #245e8b 2px;
-  }
-
   #navlinks li {
     border-bottom: solid #245e8b 2px;
     border-radius: 0;
@@ -126,37 +154,11 @@ li:hover{
   #navlinks li a{
     padding: 8px 8px 8px 32px;
     transition: 0.5s ease all;
-    font-size: 3rem;
+    font-size: 2rem;
   }
 
   #navlinks.active{
-    width: 43vw;
+    width: auto;
     left: 0;
-  }
-}
-
-@media (min-width:641px)  { /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */
-  /* smartphone width works fine */
-}
-@media (min-width:961px)  { /* tablet, landscape iPad, lo-res laptops ands desktops */
-  #navbar-mobile button, #navbar-mobile a, #navbar-mobile a.icon, #navlinks li a{
-    font-size: 2rem;
-  }
-}
-@media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */
-  #navbar-mobile{
-    display: none;
-  }
-  #navbar{
-    display: initial;
-  }
-
-  #navbar li button, #navbar li a{
-    font-size: 1rem;
-  }
-}
-@media (min-width:1281px) { /* hi-res laptops and desktops */
-  #navbar li button, #navbar li a{
-    font-size: 1.4rem;
   }
 }
