--- a/public/style/index.css
+++ b/public/style/index.css
@@ -95,6 +95,22 @@ table{
   html{
     font-size: 16px;
   }
+
+  .content{
+    max-width: 90%;
+    width: 90%;
+    padding: 8vh 5vw 8vh;
+    background: none;
+  }
+
+  table{
+    margin-left: 5%;
+    margin-right: 5%;
+    width: 90%;
+    max-width: 90%;
+    margin-bottom: 8vh;
+  }
+
 }
 
 @media only screen and (max-device-width: 640px)  { /* smartphones, iPhone, portrait 480x320 phones */
@@ -108,13 +124,6 @@ table{
     width: 80%;
     padding: 8vh 10vw 8vh;
     background: none;
-  }
-
-  table{
-    margin-left: 5%;
-    margin-right: 5%;
-    width: 90%;
-    max-width: 90%;
   }
 
 }
