--- a/public/style/navbar.css
+++ b/public/style/navbar.css
@@ -1,8 +1,6 @@
 #navlinks {
   display: flex;
   flex-direction: column;
-  height: fit-content;
-  overflow: hidden;
   width: 0;
   position: fixed;
   z-index: 20;
@@ -11,7 +9,7 @@
   background-color: #d7855f;
   color: #245e8b;
   overflow-x: hidden;
-  transition: 0.5s ease all;
+  transition: 1s ease all;
   border-right: solid #245e8b 2px;
   border-bottom: solid #245e8b 2px;
 }
@@ -108,12 +106,6 @@ li:hover{
 }
 
 @media only screen and (max-device-width:1024px) { /* tablet, landscape iPad, lo-res laptops ands desktops */
-  #navbar-mobile button, #navbar-mobile a, #navbar-mobile a.icon, #navlinks li a{
-    font-size: 2rem;
-  }
-}
-
-@media only screen and (max-device-width: 640px) { /* smartphones, iPhone, portrait 480x320 phones */
   #navbar{
     display: none;
   }
@@ -123,16 +115,22 @@ li:hover{
   }
 
   ul{
-    height: 8vh;
+    height: 16vh;
   }
 
-  #navbar-mobile button{
-    font-size: 3rem;
+  #navlinks{
+    top: 16vh;
+  }
+
+  #navbar-mobile button img{
+    width: 95%;
+    height: 95%;
   }
 
   #navbar-mobile a{
     font-size: 3rem;
     margin-bottom: 0.5%;
+    padding-top: 6px;
   }
 
   #navbar-mobile a.icon{
@@ -143,7 +141,7 @@ li:hover{
   #navlinks li {
     border-bottom: solid #245e8b 2px;
     border-radius: 0;
-    padding-bottom: 4px;
+    padding-bottom: 0;
     margin: 0;
   }
 
@@ -152,13 +150,31 @@ li:hover{
   }
 
   #navlinks li a{
-    padding: 8px 8px 8px 32px;
+    padding: 8px 2px 2px 32px;
     transition: 0.5s ease all;
-    font-size: 2rem;
+    font-size: 1.25rem;
   }
 
   #navlinks.active{
-    width: auto;
+    width: 43%;
     left: 0;
+  }
+}
+
+@media only screen and (max-device-width: 640px) { /* smartphones, iPhone, portrait 480x320 phones */
+  #navlinks.active{
+    width: 64%;
+  }
+
+  ul{
+    height: 8vh;
+  }
+
+  #navbar-mobile li a{
+    padding: 0 16px;
+  }
+
+  #navlinks{
+    top: 8vh;
   }
 }
